# physics_informed_neural_networks_tutorial

./: PINNs.ipynb  README.md  pyproject.toml
